cool data stuff

--- a/2.Model_Development/2.1.Data_Wrangling/2.1.2.data_wrangling.ipynb
+++ b/2.Model_Development/2.1.Data_Wrangling/2.1.2.data_wrangling.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = pd.read_csv(\"2.1.2.diabeties_sample_data.csv\")"
+    "data_frame = pd.read_csv(\"2.1.2.Diabeties_Sample_Data.csv\")"
    ]
   },
   {
@@ -65,9 +65,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DoB       0\n",
+       "DoT       0\n",
+       "SEX       1\n",
+       "BMI       0\n",
+       "BP        0\n",
+       "TC        0\n",
+       "BGU       0\n",
+       "FDR       0\n",
+       "Target    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame.isnull().sum()"
    ]
@@ -85,9 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DoB       0\n",
+       "DoT       0\n",
+       "SEX       0\n",
+       "BMI       0\n",
+       "BP        0\n",
+       "TC        0\n",
+       "BGU       0\n",
+       "FDR       0\n",
+       "Target    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Remove Null values\n",
     "data_frame = data_frame.dropna(subset=['SEX'])\n",
@@ -96,9 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DoB       0\n",
+       "DoT       0\n",
+       "SEX       0\n",
+       "BMI       0\n",
+       "BP        0\n",
+       "TC        0\n",
+       "BGU       0\n",
+       "FDR       0\n",
+       "Target    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace Null values with the mean value for the column\n",
     "data_frame['Target'] = data_frame['Target'].fillna(data_frame['Target'].mean())\n",
@@ -118,9 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(5)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame.duplicated().sum()"
    ]
@@ -134,9 +205,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame = data_frame.drop_duplicates()\n",
     "data_frame.duplicated().sum()"
@@ -153,9 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    female\n",
+       "1    female\n",
+       "2      male\n",
+       "3      male\n",
+       "4      male\n",
+       "Name: SEX, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame['SEX'] = data_frame['SEX'].apply(lambda x: x.lower())\n",
     "data_frame['SEX'].head()"
@@ -170,18 +268,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['female', 'male', 'girl'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame['SEX'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['female', 'male'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_frame['SEX'] = data_frame['SEX'].apply(lambda gender: 'male' if gender.lower() == 'male' else 'female')\n",
     "data_frame['SEX'].unique()"
@@ -198,9 +318,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    442.000000\n",
+      "mean      94.687738\n",
+      "std       14.224409\n",
+      "min       51.000000\n",
+      "25%       84.000000\n",
+      "50%       93.000000\n",
+      "75%      105.000000\n",
+      "max      141.000000\n",
+      "Name: BP, dtype: float64\n",
+      "Outliers are a BP above 136.5 or below 52.5\n"
+     ]
+    }
+   ],
    "source": [
     "#get the inter-quartile range on the salary column\n",
     "print(data_frame['BP'].describe())\n",
@@ -212,9 +349,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    439.000000\n",
+      "mean      94.583098\n",
+      "std       13.790260\n",
+      "min       62.000000\n",
+      "25%       84.000000\n",
+      "50%       93.000000\n",
+      "75%      105.000000\n",
+      "max      133.000000\n",
+      "Name: BP, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter salaries within the acceptable range\n",
     "data_frame = data_frame[(data_frame['BP'] >= Q1 - 1.5 * IQR) & (data_frame['BP'] <= Q3 + 1.5 * IQR)]\n",
@@ -291,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
