--- a/2.Model_Development/2.2.Feature_Engineering/2.2.1.feature_engineering.ipynb
+++ b/2.Model_Development/2.2.Feature_Engineering/2.2.1.feature_engineering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   -1\n",
-      "1   -1\n",
+      "0    1\n",
+      "1    1\n",
       "2   -1\n",
-      "3    1\n",
+      "3   -1\n",
       "4   -1\n",
       "Name: SEX, dtype: int64\n"
      ]
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,19 +117,19 @@
      "output_type": "stream",
      "text": [
       "           DoB        DoT   Age\n",
-      "0   1980-07-26 2024-10-18  44.0\n",
-      "1   1975-01-21 2024-01-06  49.0\n",
-      "2   1983-02-10 2024-02-01  41.0\n",
-      "3   1985-04-01 2024-05-09  39.0\n",
-      "4   1964-02-17 2024-03-25  60.0\n",
+      "0   2001-06-17 2024-10-09  23.0\n",
+      "1   1995-06-10 2024-08-16  29.0\n",
+      "2   1981-03-11 2024-03-08  43.0\n",
+      "3   2002-05-15 2024-05-06  22.0\n",
+      "4   2001-06-21 2024-07-20  23.0\n",
       "..         ...        ...   ...\n",
-      "434 1959-02-11 2024-02-07  65.0\n",
-      "435 1966-06-09 2024-09-10  58.0\n",
-      "436 1966-08-26 2024-11-27  58.0\n",
-      "437 1989-08-19 2024-08-04  35.0\n",
-      "438 2024-04-13 2024-04-07  -0.0\n",
+      "431 1955-04-06 2024-04-12  69.0\n",
+      "432 1962-06-22 2024-09-14  62.0\n",
+      "433 1966-08-26 2024-11-27  58.0\n",
+      "434 1980-04-28 2024-04-03  44.0\n",
+      "435 1987-06-13 2024-06-09  37.0\n",
       "\n",
-      "[439 rows x 3 columns]\n"
+      "[436 rows x 3 columns]\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,19 +166,19 @@
      "output_type": "stream",
      "text": [
       "     Age       BMI  Risk%\n",
-      "0     44  0.346667   0.30\n",
-      "1     49  0.353333   0.34\n",
-      "2     41  0.183333   0.15\n",
-      "3     39  0.206667   0.16\n",
-      "4     60  0.353333   0.42\n",
+      "0     23  0.125000   0.06\n",
+      "1     29  0.128125   0.07\n",
+      "2     43  0.140625   0.12\n",
+      "3     22  0.143750   0.06\n",
+      "4     23  0.150000   0.07\n",
       "..   ...       ...    ...\n",
-      "434   65  0.616667   0.79\n",
-      "435   58  0.723333   0.83\n",
-      "436   58  0.766667   0.88\n",
-      "437   35  0.876667   0.61\n",
-      "438    0  0.416667   0.00\n",
+      "431   69  0.718750   1.00\n",
+      "432   62  0.743750   0.93\n",
+      "433   58  0.750000   0.88\n",
+      "434   44  0.756250   0.67\n",
+      "435   37  0.759375   0.57\n",
       "\n",
-      "[439 rows x 3 columns]\n"
+      "[436 rows x 3 columns]\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,19 +217,19 @@
      "output_type": "stream",
      "text": [
       "     Age  SEX  Target\n",
-      "0     44   -1    25.0\n",
-      "1     49   -1    31.0\n",
-      "2     41   -1    37.0\n",
-      "4     60   -1    39.0\n",
-      "5     48   -1    40.0\n",
+      "2     43   -1    90.0\n",
+      "3     22   -1   101.0\n",
+      "4     23   -1    85.0\n",
+      "5     26   -1    51.0\n",
+      "6     33   -1    72.0\n",
       "..   ...  ...     ...\n",
-      "425   67   -1   303.0\n",
-      "426   43   -1   306.0\n",
-      "430   29   -1   310.0\n",
-      "432   41   -1   317.0\n",
-      "437   35   -1   346.0\n",
+      "425   43   -1   275.0\n",
+      "428   57   -1   270.0\n",
+      "429   55   -1   258.0\n",
+      "431   69   -1   237.0\n",
+      "435   37   -1   259.0\n",
       "\n",
-      "[234 rows x 3 columns]\n"
+      "[233 rows x 3 columns]\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,19 +264,19 @@
      "output_type": "stream",
      "text": [
       "     Age  FDR  FHRisk\n",
-      "0     44    0    0.15\n",
-      "1     49    1    0.38\n",
-      "2     41    1    0.38\n",
-      "4     60    0    0.15\n",
-      "5     48    0    0.15\n",
+      "2     43    2    0.62\n",
+      "3     22    2    0.62\n",
+      "4     23    2    0.62\n",
+      "5     26    2    0.62\n",
+      "6     33    0    0.15\n",
       "..   ...  ...     ...\n",
-      "425   67    1    0.38\n",
-      "426   43    1    0.38\n",
-      "430   29    2    0.62\n",
-      "432   41    1    0.38\n",
-      "437   35    3    0.85\n",
+      "425   43    0    0.15\n",
+      "428   57    1    0.38\n",
+      "429   55    2    0.62\n",
+      "431   69    2    0.62\n",
+      "435   37    0    0.15\n",
       "\n",
-      "[234 rows x 3 columns]\n"
+      "[233 rows x 3 columns]\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
     "# Calculate the family history risk\n",
     "data_frame['FHRisk'] = (data_frame['FDR'] / data_frame['FDR'].max())\n",
     "\n",
-    "# Scale the result between 0.15 and 0.95\n",
+    "# Scale the result between 0.15 and 0.85\n",
     "min_val = 0.15\n",
     "max_val = 0.85\n",
     "data_frame['FHRisk'] = (((data_frame['FHRisk'] - data_frame['FHRisk'].min()) / (data_frame['FHRisk'].max() - data_frame['FHRisk'].min())) * (max_val - min_val) + min_val).round(2)\n",
@@ -304,9 +304,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Age  Risk%  FHRisk  CombRisk\n",
+      "2     43   0.12    0.62      0.22\n",
+      "3     22   0.06    0.62      0.18\n",
+      "4     23   0.07    0.62      0.18\n",
+      "5     26   0.08    0.62      0.20\n",
+      "6     33   0.10    0.15      0.16\n",
+      "..   ...    ...     ...       ...\n",
+      "425   43   0.58    0.15      0.24\n",
+      "428   57   0.79    0.38      0.48\n",
+      "429   55   0.78    0.62      0.69\n",
+      "431   69   1.00    0.62      0.85\n",
+      "435   37   0.57    0.15      0.24\n",
+      "\n",
+      "[233 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "data_frame['CombRisk'] = (data_frame['FHRisk'] * data_frame['Risk%']).round(2)\n",
     "\n",
@@ -327,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
